fix line-height causing Firefox to render scrollbars with multi-line Chinese in some cases
It relates to the font and line-height. A minimal reproduce is as follows:

<!DOCTYPE html>
<html><meta charset=utf-8>
<style>
div {
  overflow-x: auto;
}
body {
  box-sizing: border-box;
  line-height: 1;
}
</style>
<body>
<div>a<br>啊</div>

--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,8 @@ body {
   margin: 0;
   padding: 8px;
   box-sizing: border-box;
-  line-height: 1.2;
+  /* 1.2 causes Firefox to render scrollbars with multi-line Chinese in some cases */
+  line-height: 1.21;
   /* Google Chrome defaults to Times New Roman and for sans-serif it prefers Arial... */
   font-family: 'DejaVu Sans', sans-serif;
   /*
